# ajo-cli

./: .gitignore  .repomixignore  LICENSE  README.md  index.html  pyproject.toml  repomix-output.xml
.github/workflows/: ci.yml  publish.yml
.opencode/plans/: 01_god_mode_features.md  02_next_gen_tui.md  03_execution_roadmap.md  04_addons_module_system.md  05_persistent_config_and_nerdfonts.md  06_professional_cli_roadmap.md  07_tui_main_menu.md  08_installation_scripts.md  super_agent_plan.md
.opencode/plans/done/: 04_addons_module_system_progress.md
ajo/: __init__.py  __main__.py  cli.py  cli.py.simple  cli.py.txt  database_manager.py  detector.py  exceptions.py  github_integration.py  utils.py  validators.py
ajo/commands/: __init__.py  changelog.py  completions.py  doctor.py  menu.py  report.py  scan.py  upgrade.py
ajo/core/: __init__.py  app.py  color_control.py  config.py  constants.py  crash_handler.py  environment.py  exceptions.py  lazy_imports.py  logging_config.py  signals.py  streaming.py  telemetry.py  typo_correction.py  updater.py
ajo/detector/: __init__.py  ast_analyzer.py  cache.py  prereqs.py  project.py  smart_cli.py
ajo/gateway/: __init__.py  gh.py  git.py  utils.py  uv.py
ajo/plugins/: __init__.py  discovery.py  exceptions.py  hooks.py  manifest.py
ajo/presets/: __init__.py  base.py  docker.py  docker_sync.py  graphql_api.py  monolith.py  ninja_api.py  rest_api.py
ajo/presets/addons/: __init__.py  _settings.py  auth.py  cache.py  security.py  testing.py
ajo/scaffolding/: __init__.py  engine.py
ajo/templates/: __init__.py  django_app.py
ajo/ui/: __init__.py  capabilities.py  fuzzy.py  icons.py  keyboard.py  progress.py  terminal_detector.py  theme.py
tests/: __init__.py  conftest.py  test_addon_compatibility.py  test_addon_rollback.py  test_auth_addon.py  test_cache_addon.py  test_config.py  test_dry_run.py  test_generated_factories.py  test_generated_models.py  test_generated_settings.py  test_generated_urls.py  test_headless_addons.py  test_registry.py  test_scaffold_with_addons.py  test_security_addon.py  test_settings_injector.py  test_testing_addon.py
tests/commands/: test_changelog.py  test_report.py  test_scan.py
tests/core/: test_color_control.py  test_completions.py  test_crash_handler.py  test_doctor.py  test_environment.py  test_logging_config.py  test_signals.py  test_streaming.py  test_telemetry.py  test_typo_correction.py  test_updater.py
tests/gateway/: test_utils.py
tests/plugins/: test_discovery.py  test_exceptions.py  test_hooks.py  test_manifest.py
web/: _redirects  index.html  install  install.html  install.ps1  install.sh  llm.txt  robots.txt  sitemap.xml  terminal.html
