[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ajo-cli"
version = "0.1.0"
description = "The ultimate interactive CLI scaffolding tool for Django projects"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AJO CLI Authors", email = "support@ajo-cli.com" }
]
keywords = ["django", "cli", "scaffolding", "boilerplate", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "inquirerpy>=0.3.4",
    "rich>=13.7.0",
]

[project.scripts]
ajo = "ajo.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/ajo-cli"
Repository = "https://github.com/yourusername/ajo-cli"
Issues = "https://github.com/yourusername/ajo-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["ajo"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.workspace]
members = [
    "mytest",
    "hello",
    "zaid",
]
