[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajo-cli"
version = "2.0.0"
description = "Professional Django scaffolder with Cyberpunk TUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "zaidejjo", email = "zaidejjodev@gmail.com"}
]
maintainers = [
    {name = "zaidejjodev", email = "zaidejjodev@gmail.com"}
]
keywords = ["django", "scaffolding", "cli", "tui", "cyberpunk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Software Development :: Code Generators",
]

requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ajo = "ajo.cli:main"

[project.urls]
Homepage = "https://github.com/zaidejjo/ajo-cli"
Repository = "https://github.com/zaidejjo/ajo-cli"
Documentation = "https://github.com/zaidejjo/ajo-cli#readme"
Issues = "https://github.com/zaidejjo/ajo-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ajo*"]
