[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajo-cli"
version = "3.3.0"
description = "Professional Django scaffolder with Cyberpunk TUI"
readme = "README.md"
license = "MIT"
authors = [
    {name = "zaidejjo", email = "zaidejjodev@gmail.com"}
]
maintainers = [
    {name = "zaidejjodev", email = "zaidejjodev@gmail.com"}
]
keywords = ["django", "scaffolding", "cli", "tui", "cyberpunk"]
classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Environment :: Console",
     "Topic :: Software Development :: Code Generators",
]

requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.6.0",
    "shtab>=1.8",
]

[project.scripts]
ajo = "ajo:main"

[project.urls]
Homepage = "https://github.com/zaidejjo/ajo-cli"
Repository = "https://github.com/zaidejjo/ajo-cli"
Documentation = "https://github.com/zaidejjo/ajo-cli#readme"
Issues = "https://github.com/zaidejjo/ajo-cli/issues"

[project.optional-dependencies]
completions = [
    "shtab>=1.8.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ajo*"]

[tool.uv.workspace]
members = [
    "zaid",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
